.k8s/cms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  labels:
    deployment: cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
        - name: cms
          image: registry.digitalocean.com/example-registry/cms:latest
          volumeMounts:
            - name: config-volume
              mountPath: /periodtracker/config
      volumes:
        - name: config-volume
          configMap:
            name: firebase-config
            items:
              - key: firebase.conf
                path: 'firebase-config.json'
---
kind: Service
apiVersion: v1
metadata:
  name: cms
spec:
  type: ClusterIP
  selector:
    app: cms
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
