.k8s/cms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: periodtracker-cms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - cms.example.com
      secretName: periodtracker-cms-letsencrypt-tls
  rules:
    - host: cms.example.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: cms
                port:
                  number: 5000
